refactor: move worker to separate module fix: avoid setup_logging being called twice, avoiding duplicate log entries feat: add database code to worker module refactor: simplify middleware layer by removing separate exception middleware feat: make max threads configurable

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -29,4 +29,4 @@ tasks:
 
   worker:
     cmds:
-      - poetry run arq app.worker.settings.WorkerSettings --watch .
+      - poetry run arq worker.settings.WorkerSettings --watch .
